[gd_scene load_steps=20 format=2]

[ext_resource path="res://Textures/Enemies/Skeleton.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Enemies/Skeleton.gd" type="Script" id=3]
[ext_resource path="res://Textures/Enemies/Hitflash.gdshader" type="Shader" id=4]
[ext_resource path="res://Textures/Enemies/ProgressBarTheme.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=19]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 5.02494

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 7.5 )

[sub_resource type="CircleShape2D" id=21]
radius = 5.04425

[node name="Skeleton" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 24
script = ExtResource( 3 )
wanderRange = 40

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 19 )
frames = SubResource( 9 )
animation = "Run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 22 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 2
collision_mask = 64
knockback_resistance = 1
invincibility_time = 0.4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 11 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -8.0
margin_top = -9.33333
margin_right = 19.0
margin_bottom = -7.33333
rect_scale = Vector2( 0.6, 1 )
theme = ExtResource( 5 )
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="ProgressBar"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 5.0
path_max_distance = 20.0

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 250, 0 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_layer = 32
collision_mask = 4
damage = 15
knockback_strength = 100

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0.333333 )
shape = SubResource( 21 )

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
pause_animated_sprites = false
process_parent = true
physics_process_parent = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
